--- a/style/style.css
+++ b/style/style.css
@@ -137,17 +137,16 @@ svg{
 
 .service img {
     width: 100%;
-    max-width: 300px; /* Adjust the size as necessary */
+    max-width: 300px;
     height: auto;
     margin-bottom: 20px;
 }
 
 .service h2 {
-    color: #333; /* or any color you prefer */
-}
+    color: #333;
 
 .service p {
-    color: #666464; /* or any color you prefer */
+    color: #666464;
     font-size: 1rem;
     line-height: 1.5;
     margin-bottom: 20px;
@@ -163,18 +162,18 @@ svg{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start; /* Align items to the start */
+    justify-content: flex-start; 
     min-height: 100vh;
     text-align: center;
-    padding-top: 30px; /* Add padding to the top */
-    padding-bottom: 50px; /* Adjust bottom padding as needed */
+    padding-top: 30px; 
+    padding-bottom: 50px;
 }
 
 
 .avatar {
-    width: 150px; /* Adjust as needed */
+    width: 150px; 
     height: auto;
-    border-radius: 50%; /* Circular image */
+    border-radius: 50%; 
     margin-bottom: 20px;
 }
 
@@ -187,10 +186,10 @@ p {
     color: #333;
     line-height: 1.6;
     max-width: 800px;
-    margin: 0 auto; /* Center the paragraph */
+    margin: 0 auto; 
 }
 .contact-body {
-    background-color: #12314d; /* Bootstrap secondary color, adjust as needed */
+    background-color: #12314d; 
 }
 
 
@@ -198,23 +197,23 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center; /* Center content vertically */
+    justify-content: center; 
     min-height: 100vh;
     text-align: center;
-    padding: 30px 0; /* Add padding to the top and bottom */
+    padding: 30px 0; 
 }
 
 /* Ensure the form container itself also has centered text */
 .contact-form .container {
-    background-color: #6c757d; /* Bootstrap secondary color, adjust as needed */
-    text-align: left; /* Align form elements to the left */
+    background-color: #6c757d; 
+    text-align: left;
 }
 
 .service svg {
-    width: 50px; /* Adjust the size of the SVGs */
+    width: 50px; 
     height: auto;
 }
 
 .service .row {
-    margin-bottom: 20px; /* Space between rows */
+    margin-bottom: 20px;
 }
